--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-flask==3.0.0
+Flask==2.3.3
 flask-cors==4.0.0
-flask-socketio==5.3.6
-python-socketio==5.11.0
-ultralytics==8.0.0
-Pillow==10.0.0
-opencv-python-headless==4.8.0.76
-torch==2.0.1
-torchvision==0.15.2
-timm==0.9.7
+flask-socketio==5.3.4
+ultralytics==8.0.221
+Pillow==10.1.0
+opencv-python==4.8.1.78
 numpy==1.24.3
+requests==2.31.0
+torch==2.1.0
+torchvision==0.16.0
+timm==0.9.12
+python-socketio==5.9.0
+python-engineio==4.5.1
