--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-flask==3.0.0
-flask-cors==4.0.0
-flask-socketio==5.3.6
-python-socketio==5.11.0
 ultralytics==8.0.0
-Pillow==10.0.0
+torch==2.4.1+cu121
+torchvision==0.19.1+cu121
+torchaudio==2.4.1+cu121
+opencv-python==4.11.0.86
 opencv-python-headless==4.8.0.76
-torch==2.0.1
-torchvision==0.15.2
-timm==0.9.7
-numpy==1.24.3
-gunicorn==21.2.0
+flask==3.1.2
+flask-cors==6.0.1
+flask-socketio==5.6.0
+python-socketio==5.16.0
+python-engineio==4.13.0
 eventlet==0.33.3
+pillow==11.3.0
+numpy==1.26.4
+pandas==2.3.2
+timm==1.0.24
+gunicorn==21.2.0
