--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ultralytics==8.0.0
-torch==2.4.1+cu121
-torchvision==0.19.1+cu121
-torchaudio==2.4.1+cu121
+torch==2.4.1
+torchvision==0.19.1
+torchaudio==2.4.1
 opencv-python==4.11.0.86
 opencv-python-headless==4.8.0.76
 flask==3.1.2
